# mac-info

./: ._README.md  ._mac-info  ._requirements.txt  .gitignore  README.md  mac-info  pyproject.toml  requirements.txt  setup_venv.sh
.kiro/specs/mac-info-tool/: design.md  requirements.md  tasks.md
src/mac_info/: __init__.py  __main__.py  cli.py  display_formatter.py  exceptions.py  metrics_collector.py  models.py  process_manager.py  system_integration.py  temperature_monitor.py
tests/: test_basic_functionality.py
